 * Realtime now supports database failover.  See the sample extconfig.conf for details.
 * The addition of improved translation path building for wideband codecs.  Sample
   rate changes during translation are now avoided unless absolutely necessary.
 * The addition of the res_stun_monitor module for monitoring and reacting to network
   changes while behind a NAT.
 * The DTMF Normal and Reverse Twist acceptance values can be set in dsp.conf.
   This allows support for any Administration. Default is AT&T values.

CLI Changes
-----------
 * The 'core set debug' and 'core set verbose' commands, in previous versions, could
   optionally accept a filename, to apply the setting only to the code generated from
   that source file when Asterisk was built. However, there are some modules in Asterisk
   that are composed of multiple source files, so this did not result in the behavior
   that users expected. In this version, 'core set debug' and 'core set verbose'
   can optionally accept *module* names instead (with or without the .so extension),
   which applies the setting to the entire module specified, regardless of which source
   files it was built from.
 * New 'manager show settings' command showing the current settings loaded from
   manager.conf.
 * Added 'all' keyword to the CLI command "channel request hangup" so that you can send
   the channel hangup request to all channels.
 * Added a "core reload" CLI command that executes a global reload of Asterisk.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.
   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.
 * Added support for setting the domain in the URI for caller of an